@@ -1,3 +1,15 @@
+ 2011-12-01 09:54  dimitr 
+   M src/jrd/exe.cpp
+For a number of reasons, it seems being a good thing to unwind the trigger requests ASAP.
+
+ 2011-12-01 09:37  dimitr 
+   M src/jrd/vio.cpp
+Correction.
+
+ 2011-12-01 09:24  dimitr 
+   M src/jrd/vio.cpp
+Attempted to fix CORE-3490: Concurrency problem when using named cursors. The solution may look sub-optimal but it doesn't seem to affect the performance.
+
  2011-12-01 00:47  asfernandes 
    M src/jrd/recsrc/AggregatedStream.cpp
 Fixed window function with empty streams.
